--- a/titeres.html
+++ b/titeres.html
@@ -83,10 +83,10 @@
     <div class="contenedor-col-curso">
         <div class="curso-nav">
             <a href="cursos.html">
-                <h4 class="curso-activo">juegos étnicos</h4>
+                <h4>juegos étnicos</h4>
             </a>
             <a href="titeres.html">
-                <h4>títeres</h4>
+                <h4 class="curso-activo">títeres</h4>
             </a>
             <a href="ajedrez.html">
                 <h4>ajedrez y cultura</h4>
@@ -96,7 +96,7 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/ETNICOS.png" alt="">
+            <img src="img/TITERES.png" alt="">
         </div>
         <div class="curso-carrito">
             <i class="fas fa-shopping-cart"></i>
@@ -124,36 +124,35 @@
                 <div class="drop-item">
                     <ul>
                         <li>
-                            <p>Juego, Danza, Mito y Rito<br>
-                                El hecho aborigen y el hecho folklórico<br>
-                               <strong>Juegos Africanos</strong>
-                            </p>
-                        </li>
-                        <li>
-                            <p> <strong>JUEGOS EUROPEOS</strong><br>
-                                <strong>JUGUETES ABORÍGENES</strong><br>
-                                <strong>JUEGOS EN AMÉRICA</strong>
-                            </p>
-                        </li>
-                        <li>
-                            <p><strong>JUEGOS ORIENTALES</strong><br>
-                                Coreanos, Chinos y Japoneses
+                            <p> 
+                                <strong>TÍTERE DE MAROTE EN CARTAPESTA</strong><br>
+                                Realización de diseño<br>
+                                Armado de cabeza y manos<br>
+                                Confección de vestuario y moldes<br><br>
+                                <strong>"PROXIMAMENTE"</strong><br>
                             </p>
                         </li>
                         <li>
                             <p>
-                                <strong>JUEGOS ESCANDINAVOS</strong>
+                                <strong>TEATRO DE SOMBRAS</strong><br>
+                                Elección del cuento deseado a interpretar.<br>
+                                Diseño de teatro de sombras y realización del personaje y la escenografía
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>TÍTERE BOCON DE VARILLA</strong>
                             </p>
                         </li>
                     </ul>
-                    <p>a cargo del prof. Adrián Napoli.</p>
+                    <p>a cargo del prof. Sebastián González.</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
-        <img src="img/etnicos.jpg" alt="">
+        <img src="img/titeres.jpg" alt="">
         <button type="button">empieza ya</button>
         <h3>Curso completo de <strong>JUEGOS ÉTNICOS</strong> con especialistas</h3>
     </div>
@@ -180,13 +179,10 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                <p>
-                    Prof. Adrián Napoli.<br>
-                    Docente en el ámbito público y privado desde el año 2006, en la actualidad pertenece
-                    al equipo de Conducción del Colegio No18 de 18. Su trayectoria académica tiene una
-                    variada vertiente en función de sus diversas formaciones, cursos, seminarios,talleres,
-                    jornadas, congresos: es profesor de Artes en Música (UNA), prof. de Ed.Física (DIKENS),
-                    Téc. Nacional en Recreación (ISTLyR), Téc. Diseñador de Juegosy Juguetes(YUGUETS),
-                    Téc. Ludotecario (YUGUETS), y Téc. Sup. en Psicología.
+                    Prof. Sebastián Gonzalez.<br>
+                    Titiritero y artista, Director de la Cía. de Títeres Aferrate a la Baranda y la
+                    Productora Los Realizadores. Creador de títeres en televisión, y numerosas obras
+                    presentadas formado con numerosos maestros titiriteros.
                </p>
             </div>
         </div>
@@ -197,7 +193,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Para inscribirseal curso podes hacerlo directamente desde el botón comprar y
+                    Para inscribirseal curso podes hacerlo directamente desde el botón "comprar" y
                     seguir los pasos o bien contactarse con nosotros vía whatsapp o mail.
                 </p>
             </div>
@@ -209,7 +205,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Se puede empezar en el momento quese desee.
+                    Se puede empezar en el momento que se desee.
                 </p>
             </div>
         </div>
@@ -220,8 +216,8 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso consta de 3 módulos conuna duración estimada de 3 meses, pudiendo
-                    manejar tus díasy horarios.
+                    El curso consta de 3 módulos con una duración estimada de 3 meses, pudiendo
+                    manejar tus días y horarios.
                 </p>
             </div>
         </div>
@@ -232,12 +228,10 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Cada módulo incluye:<br>
-                    Material visual (videos de you tube, power point) videos del profesor.<br>
-                    Autoevaluacionesy Tareas.<br>
-                    También cuenta conel foro para abrir dialogo entre los que cursany el profesor.<br>
-                    Cada módulo necesitaque se completen estas dos instancias para habilitar al
-                    siguiente.
+                    En cada modulose guiará para la realización del títere o teatro a través de videos
+                    e intercambios con el profesor.<br>
+                    También cuenta con el foro para abrir diálogo entre los cursantes y el profesor.<br>
+                    La finalización de cada trabajo habilitará para pasar al próximo módulo.
                 </p>
             </div>
         </div>
