--- a/ajedrez.html
+++ b/ajedrez.html
@@ -96,7 +96,7 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/ETNICOS.png" alt="">
+            <img src="img/AJEDREZ.png" alt="">
         </div>
         <div class="banda-central">
             <p>Interactivo on line</p>
