--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
     </nav>
     <!-- MASTHEAD -->
-    <div class="masthead">
+    <div class="masthead imagen">
         <div class="col-1">
-            <p>El juego es el derecho natural del ser humano</p>
-            <img src="img/mundo.png" alt="mundo">
+            <p>JUEGOS CONSCIENTES</p>
+            <!-- <img src="img/mundo.png" alt="mundo"> -->
         </div>
         <div class="col-2">
             <div class="text-masthead">
@@ -79,8 +79,6 @@
                 </a>
             </div>
             <div class="casa">
-                <div class="triang1"></div>
-                <div class="triang2"></div>
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="texto-casa">
