--- a/ajedrez.html
+++ b/ajedrez.html
@@ -26,15 +26,15 @@
             <div class="nav-sup">
                 <div class="nav-icon">
                     <div class="icon-item">
-                        <a href="#"><i class="fas fa-envelope"></i></a>
+                        <i class="fas fa-envelope form-contacto"></i>
                     </div>
                     <div class="icon-item">
-                        <a href="#"><i class="fas fa-share-alt"></i></a>
+                        <i class="fas fa-share-alt compartir-redes"></i>
                     </div>
                 </div>
                 <div class="nav-link-sup">
-                    <p>yuguets ong</p>
-                    <p>institucional</p>
+                    <a href="ong.html">yuguets ong</a>
+                    <a href="institucional.html">institucional</a>
                 </div>
             </div>
             <div class="margen"></div>
@@ -60,6 +60,26 @@
             </div>
         </div>
     </nav>
+    <!-- MODAL REDES -->
+    <div class="modal-2" id="modal-redes">
+        <div class="modal-contenido-2">
+            <div class="modal-title-2">
+                <img src="img/iso.png" alt="">
+                <span id="cerrarModal">&times;</span>
+            </div>
+            <div class="modal-body-2">
+                <h3>compartir en redes sociales</h3>
+                <p>¡Gracias por compartir!</p>
+            </div>
+            <div class="modal-footer-2">
+                <iframe
+                    src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
+                    width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                </iframe>
+            </div>
+        </div>
+    </div>
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
@@ -117,13 +137,13 @@
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a target="_blank" href="https://www.facebook.com/institutoyuguets"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="icon-redes">
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.instagram.com/institutoyuguets/"><i class="fab fa-instagram"></i></a>
         </div>
         <div class="icon-redes">
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCX6m-Y3Z1KfY4z1RZ4utBkA"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
     <div class="columns">
