--- a/ong.html
+++ b/ong.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="nav-link-sup">
-                    <a href="ong.html">yuguets ong</a>
+                    <a href="ong.html" class="active-link-ong">yuguets ong</a>
                     <a href="institucional.html">institucional</a>
                 </div>
             </div>
@@ -46,9 +46,8 @@
                     <li class="nav-link">
                         <a href="carrera.html">carrera</a>
                     </li>
-                    <li class="nav-link active">
+                    <li class="nav-link">
                         <a href="cursos.html">cursos</a>
-                        <div class="linea-link"></div>
                     </li>
                     <li class="nav-link">
                         <a href="graduados.html">graduados</a>
@@ -99,41 +98,29 @@
             </div>
         </div>
     </div>
-    <!-- CURSO -->
-    <div class="contenedor-col-curso">
-        <div class="curso-nav">
-            <a href="cursos.html">
-                <h4>juegos étnicos</h4>
-            </a>
-            <a href="titeres.html">
-                <h4>títeres</h4>
-            </a>
-            <a href="ajedrez.html">
-                <h4>ajedrez y cultura</h4>
-            </a>
-            <a href="abj.html">
-                <h4 class="curso-activo">abj</h4>
-            </a>
+    <!-- CONTENIDO ONG -->
+    <div class="contenido-ong">
+        <div class="ong-title">
+            <h3>instituto superior yuguets</h3>
         </div>
-        <div class="curso-central">
-            <img src="img/ABJ.png" alt="">
-        </div>
-        <div class="banda-central">
-            <p>on line</p>
-        </div>
-        <div class="curso-col-text">
-            <h2>aprendizaje basado en el juego</h2>
-        </div>
-        <div class="curso-programa">
-            <div class="curso-programa-boton">
-                <h1>abj</h1>
-            </div>
-        </div>
-        <div class="curso-programa-drop">
-            <h2>"proximamente"</h2>
+        <div class="ong-body">
+            <p>En el 2002 El Centro Yuguets (ONG) incorpora enseñanza oficial
+                con la Apertura del Instituto Superior Yuguets –Primer Instituto 
+                especializado en Juego-Juegos y Juguetes y la creación de Nuevas
+                Carreras, de grado y con Titulo Oficial.<br><br>
+                El Objetivo es formar profesionales idóneos en el uso y en la 
+                aplicación del Juego y en el diseño de juegos y juguetes ( para todo
+                ámbito y para toda edad ; también como proyecto sustentable y/o
+                de crecimiento personal . Las carreras permiten una formación 
+                lúdica integral , también investigar el origen, la trayectoria y la evolución
+                 de los juegos a traves del tiempo y en las distintas culturas...
+                Cómo jugarlos- cómo construirlos- y cómo diseñar juegos y juguetes 
+                innovadores, atentos a la diversidad y con identidad nacional.
+            </p>
+            <img src="img/muñecoblanco.png" alt="">
         </div>
     </div>
-    <!-- FOOTER -->
+    <!-- FOOTER Y REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
@@ -181,7 +168,6 @@
     <div class="legales">
         <h4>Derechos Reservados Yuguets</h4>
     </div>
-    <script src="js/curso.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
