--- a/institucional.html
+++ b/institucional.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="nav-link-sup">
                     <a href="ong.html">yuguets ong</a>
-                    <a href="institucional.html">institucional</a>
+                    <a href="institucional.html" class="active-link-ong">institucional</a>
                 </div>
             </div>
             <div class="margen"></div>
@@ -46,9 +46,8 @@
                     <li class="nav-link">
                         <a href="carrera.html">carrera</a>
                     </li>
-                    <li class="nav-link active">
+                    <li class="nav-link">
                         <a href="cursos.html">cursos</a>
-                        <div class="linea-link"></div>
                     </li>
                     <li class="nav-link">
                         <a href="graduados.html">graduados</a>
@@ -99,41 +98,8 @@
             </div>
         </div>
     </div>
-    <!-- CURSO -->
-    <div class="contenedor-col-curso">
-        <div class="curso-nav">
-            <a href="cursos.html">
-                <h4>juegos étnicos</h4>
-            </a>
-            <a href="titeres.html">
-                <h4>títeres</h4>
-            </a>
-            <a href="ajedrez.html">
-                <h4>ajedrez y cultura</h4>
-            </a>
-            <a href="abj.html">
-                <h4 class="curso-activo">abj</h4>
-            </a>
-        </div>
-        <div class="curso-central">
-            <img src="img/ABJ.png" alt="">
-        </div>
-        <div class="banda-central">
-            <p>on line</p>
-        </div>
-        <div class="curso-col-text">
-            <h2>aprendizaje basado en el juego</h2>
-        </div>
-        <div class="curso-programa">
-            <div class="curso-programa-boton">
-                <h1>abj</h1>
-            </div>
-        </div>
-        <div class="curso-programa-drop">
-            <h2>"proximamente"</h2>
-        </div>
-    </div>
-    <!-- FOOTER -->
+    <!-- CONTENIDO INSTITUCIONAL -->
+    <!-- FOOTER Y REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
@@ -181,7 +147,6 @@
     <div class="legales">
         <h4>Derechos Reservados Yuguets</h4>
     </div>
-    <script src="js/curso.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
