--- a/institucional.html
+++ b/institucional.html
@@ -13,7 +13,7 @@
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Instituto Yuguets</title>
 </head>
-<body>
+<body id="arriba">
     <!-- NAVEGACION -->
     <nav class="nav">
         <div class="menu-btn" id="btn-menu">
@@ -99,6 +99,242 @@
         </div>
     </div>
     <!-- CONTENIDO INSTITUCIONAL -->
+    <!-- ASOCIACION -->
+    <div class="contenedor-asociacion">
+        <div class="asociacion-title">
+            <h3>asociación civil</h3>
+        </div>
+        <div class="asociacion-col">
+            <div class="asociacion-col-contenido">
+                <h4>
+                    Asociación Civil sin fines de lucro y
+                    Entidad de bien público, nos
+                    desempeñamos especialmente en
+                    Juego, Juegos, Juguetes y Calidad
+                    de Vida (Areas Educación no
+                    formal, formal y Cultura de Paz).
+                </h4>
+            </div>
+            <div class="asociacion-col-contenido">
+                <p>
+                    En 1996 la Prof. Dra. Rosa Planas Bartrina
+                    crea una Entidad Especializada, con
+                    propuestas especificas y concretas para
+                    las áreas Cultura-Educación-Salud-Trabajo.
+                    El Centro Yuguets Argentina (ONG)
+                    elaborando de ésta manera alternativas
+                    específicas para favorecer el rendimiento
+                    educativo, la enseñanza en valores, la no
+                    violencia y la formación integral de
+                    niños/jóven.
+                </p>
+                <p>
+                    El eje central de los Programas es
+                    estimular la Facultad Lúdica del Ser
+                    Humano como base del desarrollo
+                    armónico de la Persona desde su
+                    gestación y a lo largo de toda su vida
+                    mostrando que la Educación y la formación
+                    integral del individuo es positiva si
+                    adquiere una cultura lúdica y puede
+                    aplicarla en sí mismo, en sus estudios,
+                    trabajo, familia y sociedad.
+                </p>
+            </div>
+            <div class="asociacion-col-contenido">
+                <div class="contenido-title">
+                    <h3>NECESIDADES de Yuguets</h3>
+                </div>
+                <p>
+                    Los años de crisis social muestran
+                    problemas y necesidades de los niños/as,
+                    la familia, los padres, el joven, la mujer-
+                    madre, el estudiante, el docente, la tercera
+                    edad, el discapacitado, las Instituciones y la
+                    comunidad en general.
+                </p>
+                <p>
+                    Es necesario lograr un cambio que
+                    detenga la violencia intra y extra familiar, el
+                    trabajo de menores, mujeres con hijos en
+                    situación de alto riego. Un cambio que
+                    enfrente la falta de trabajo, la pobreza, el
+                    abandono del estudio, el bajo rendimiento
+                    educativo, la crisis docente, los conflictos
+                    socioeconómicos en todas las clases
+                    sociales, etc.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- PROGRAMA EDUCATIVO -->
+    <div class="programa-title">
+        <h3>programa eventos educativos</h3>
+    </div>
+    <div class="programa-col">
+        <div class="programa-col-contenido">
+            <p>
+                Fecha: 7 y 8 de Noviembre 1998<br>
+                Lugar: Casa de la Cultura -<br>
+                Ramon Carillo 2476 - San Martin - Bs As<br>
+            </p>
+            <p>
+                <strong>
+                    I Jornada Educativa Internacional
+                    “La Recreacion y el Juego ̈ Un derecho
+                    para todos”                
+                </strong>
+            </p>
+            <p>
+                Expositores:<br>
+                Lic. Julio C. Labaque (Argentina)<br>
+                Lic. Marina Muller (Argentina)<br>
+                Lic. Gladys Brites (Argentina)<br>
+                Prof. Andres Ziperovich (Argentina)<br>
+                Prof. Imma Marin (España)<br>
+                Gotzon Audzmendi (Espana)<br>
+                Lic. Tula Bardier (Uruguay)<br>              
+            </p>
+        </div>
+        <div class="programa-col-contenido">
+            <p>
+                Fecha: 28 de Agosto al<br>
+                4 de Septiembre de 1999<br>
+                Lugar: Instituto Ballester<br>
+                Salón Intersecretarios Legislatura<br>
+            </p>
+            <p>
+                <strong>
+                    II Jornadas Educativas Internacionales
+                    “La Recreacion y el Juego” Un Derecho
+                    para todos<br>
+                    III Jornadas Educativas Internacionales
+                    Investigacion “La Facultad Ludica en el
+                    Ser Humano”<br>
+                    I Congreso Nacional "El Juego y la
+                    calidad de vida"<br>
+                </strong>
+            </p>
+            <p>
+                Expositores de Argentina, Brasil,
+                Uruguay, Espana, Japon.       
+            </p>
+            <p>
+                *Se realizo un manifiesto para Reivindicar la Facultad Ludica del Ser Humano.<br>
+                Fue auspiciado por la UNESCO
+            </p>
+        </div>
+        <div class="programa-col-contenido-3">
+            <p>
+                Fecha: 6 al 9 de octubre de 2001<br>
+                Talleres de Jornada Completa en
+                Congresos                 
+            </p>
+            <p>
+                Temas: Juegos y Juguetes para la Paz
+                Coordinacion: Centro Yuguets y
+                Prof. Gotzon Audzmendi (Espana)
+            </p>
+            <p>
+                Video: “Jugar es un asunto Serio”
+                Stand: Programa Recreación Productiva
+                (Juegos realizados por niños con necesidades 
+                especiales integrador para
+                mejorar la calidad de vida y descubrir un
+                mundo mejor.
+            </p>
+        </div>
+        <div class="programa-col-contenido">
+            <p>
+                Fecha: 20 al 22 de septiembre de 2002
+            </p>
+            <p>
+                <strong>
+                    V Jornadas Educativas Internacionales
+                    “La Recreacion y el Juego  ̈ un derecho
+                    para todos”<br>
+                    V Jornada de Investigacion “Educacion
+                    y Juegos por la Paz”
+                </strong>
+            </p>
+            <p>
+                Expositores: Argentina, Uruguay, Brasil
+            </p>
+        </div>
+        <div class="programa-col-contenido">
+            <p>
+                1999 al 2008 "Juegos y Juguetes para todos"<br>
+                Lugar: Jardin Japones
+            </p>
+            <p>
+                Stand y Talleres específicos, Construcción de juegos (Todo publico)
+                Casita Fundación Espacios Verdes
+            </p>
+        </div>
+    </div>
+    <!-- PUERTAS ABIERTAS -->
+    <div class="puertas-title">
+        <h3>programa puertas abiertas</h3>
+    </div>
+    <div class="puertas-body">
+        <div class="puertas-col-1">
+            <p>
+                Redes y Apoyo a Instituciones Educativas carenciadas para armado de Ludotecas.
+            </p>
+            <p>
+                Tener acceso al Juego mejora la calidad de vida y nos da herramientas para
+                afrontar las adversidades de la vida para una cultura de PAZ.                
+            </p>
+        </div>
+        <div class="puertas-col-2">
+            <p>
+                <strong>
+                    Comunidad Misión San Francisco Pichanal<br>
+                    Salta
+                </strong>
+            </p>
+            <p>
+                <strong>
+                    Escuela Rural - Escuadrón 28<br>
+                    Mendoza
+                </strong>
+            </p>
+            <p>
+                <strong>
+                    Conin
+                </strong>
+            </p>
+        </div>
+    </div>
+    <!-- PRENSA -->
+    <div class="prensa-title">
+        <h2>prensa</h2>
+    </div>
+    <div class="prensa-body">
+        <div class="prensa-col">
+            <div class="prensa-col-title">
+                <h3>de Clarin</h3>
+            </div>
+            <div class="prensa-col-body">
+                <h3>ludotecario</h3>
+                <h4>la carrera que de los juguetes una profesión</h4>
+                <a href="#">ver nota</a>
+            </div>
+        </div>
+        <div class="prensa-col">
+            <div class="prensa-col-title">
+                <h3>de La Nación</h3>
+            </div>
+            <div class="prensa-col-body">
+                <h3>los juguetes</h3>
+                <h4>los juguetes convencionales pasan a ser una amenaza seria para el medio ambiente</h4>
+                <a href="#">ver nota</a>
+            </div>
+        </div>
+    </div>
+    <div class="btn-subir">
+        <a href="#arriba">subir</a>
+    </div>
     <!-- FOOTER Y REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
