--- a/carrera.html
+++ b/carrera.html
@@ -285,6 +285,25 @@
             </div>
         </div>
     </div>
+    <!-- TESTIMONIOS -->
+    <div class="carrera-testimonios-title">
+        <h3>testimonios</h3>
+    </div>
+    <div class="carrera-testimonios-body">
+        <div class="col-testimonios">
+            <video controls>
+                <source src="videos/testimonio-1.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="col-testimonios">
+            <video controls>
+                <source src="videos/testimonio-2.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+    <div class="btn-subir">
+        <a href="#arriba">subir</a>
+    </div>
     <!-- FOOTER -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
