--- a/carrera.html
+++ b/carrera.html
@@ -82,7 +82,7 @@
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-carrera-1">
-            <p>El juego es el derecho natural del ser humano</p>
+            <p>JUEGOS CONSCIENTES</p>
             <div class="charla">
                 <div class="titulo-charla">
                     <h3>charla informativa</h3>
