--- a/contacto.html
+++ b/contacto.html
@@ -83,7 +83,7 @@
     <!-- CONTENIDO PAGINA -->
     <div class="masthead">
         <div class="col-1">
-            <p>El juego es el derecho natural del ser humano</p>
+            <p>JUEGOS CONSCIENTES</p>
             <div class="formulario">
                 <form action="">
                     <div class="form-title">
