--- a/inscripcion.html
+++ b/inscripcion.html
@@ -81,7 +81,7 @@
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
-            <p>El juego es el derecho natural del ser humano</p>
+            <p>JUEGOS CONSCIENTES</p>
             <div class="formulario-inscripcion">
                 <div class="form-1">
                     <form action="">
