--- a/institucional.html
+++ b/institucional.html
@@ -82,7 +82,7 @@
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
-            <p>El juego es el derecho natural del ser humano</p>
+            <p>JUEGOS CONSCIENTES</p>
         </div>
         <div class="col-2">
             <div class="text-masthead">
