--- a/carrera.html
+++ b/carrera.html
@@ -79,10 +79,31 @@
             </div>
         </div>
     </div>
-    <!-- MASTHEAD -->
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
+    <!-- MASTHEAD CARRERA -->
     <div class="masthead">
-        <div class="col-carrera-1">
+        <div class="col-1">
             <p>JUEGOS CONSCIENTES</p>
+        </div>
+        <div class="col-2">
+            <div class="text-masthead">
+                <h3>Ingreso Marzo 2021</h3>
+            </div>
+            <div class="btn-masthead">
+                <a href="inscripcion.html" class="btn">Inscripción</a>
+            </div>
+        </div>
+    </div>
+    <div class="masthead-carrera">
+        <div class="col-carrera-1">
             <div class="charla">
                 <div class="titulo-charla">
                     <h3>charla informativa</h3>
@@ -111,25 +132,12 @@
             </div>
         </div>
         <div class="col-carrera-2">
-            <div class="cont-carrera">
-                <div class="text-masthead">
-                    <h3>Ingreso Marzo 2021</h3>
-                </div>
-                <div class="btn-masthead">
-                    <a href="inscripcion.html" class="btn">Inscripción</a>
-                </div>
-            </div>
             <div class="cont-carrera-2">
                 <div class="cont-texto">
                     <h2>Carrera Terciaria</h2>
                     <h2>TECNICATURA SUPERIOR</h2>
                     <h2>en LUDOTECAS con DISEÑO</h2>
                     <h2>en JUEGOS y JUGUETES</h2>
-                </div>
-                <div class="wtsp">
-                    <a href="#" id="btn-ws">
-                        <img src="img/iconwts.png" alt="">
-                    </a>
                 </div>
             </div>
             <div class="cont-carrera-3">
