--- a/index.html
+++ b/index.html
@@ -75,11 +75,20 @@
                 <iframe
                     src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
                     width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;">
                 </iframe>
             </div>
         </div>
     </div>
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
     <!-- MASTHEAD -->
     <div class="masthead imagen">
         <div class="col-1">
@@ -92,11 +101,11 @@
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
             </div>
-            <div class="icon-wtsp">
+            <!-- <div class="icon-wtsp">
                 <a href="#" id="btn-ws">
                     <img src="img/iconwts.png" alt="">
                 </a>
-            </div>
+            </div> -->
             <div class="casa">
                 <div class="line1"></div>
                 <div class="line2"></div>
