--- a/ajedrez.html
+++ b/ajedrez.html
@@ -80,6 +80,15 @@
             </div>
         </div>
     </div>
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
@@ -91,11 +100,6 @@
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
-            <div class="icon-wtsp">
-                <a href="#" id="btn-ws">
-                    <img src="img/iconwts.png" alt="">
-                </a>
             </div>
         </div>
     </div>
