--- a/titeres.html
+++ b/titeres.html
@@ -80,6 +80,15 @@
             </div>
         </div>
     </div>
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
@@ -91,11 +100,6 @@
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
-            <div class="icon-wtsp">
-                <a href="#" id="btn-ws">
-                    <img src="img/iconwts.png" alt="">
-                </a>
             </div>
         </div>
     </div>
@@ -149,23 +153,23 @@
                                 Realización de diseño<br>
                                 Armado de cabeza y manos<br>
                                 Confección de vestuario y moldes<br><br>
-                                <strong>"PROXIMAMENTE"</strong><br>
+                                <strong class="texto-violeta bold">"PROXIMAMENTE"</strong><br>
                             </p>
                         </li>
                         <li>
-                            <p>
+                            <p class="texto-violeta">
                                 <strong>TEATRO DE SOMBRAS</strong><br>
                                 Elección del cuento deseado a interpretar.<br>
                                 Diseño de teatro de sombras y realización del personaje y la escenografía
                             </p>
                         </li>
                         <li>
-                            <p>
+                            <p class="texto-violeta">
                                 <strong>TÍTERE BOCON DE VARILLA</strong>
                             </p>
                         </li>
                     </ul>
-                    <p>a cargo del prof. Sebastián González.</p>
+                    <p class="texto-violeta">a cargo del prof. Sebastián González.</p>
                 </div>
             </div>
         </div>
@@ -174,7 +178,7 @@
     <div class="curso-img-contenedor">
         <img src="img/titeres.jpg" alt="">
         <button type="button">empieza ya</button>
-        <h3>Curso completo de <strong>JUEGOS ÉTNICOS</strong> con especialistas</h3>
+        <h3>Curso completo de <strong>TÍTERES</strong> con especialistas</h3>
     </div>
     <div class="preguntas-title">
         <h3>Preguntas frecuentes</h3>
