--- a/titeres.html
+++ b/titeres.html
@@ -293,6 +293,22 @@
             </div>
         </div>
     </div>
+    <!-- BECAS -->
+    <div class="becas-contenedor">
+        <h3>programa de becas</h3>
+        <img src="img/elena.jpg" alt="">
+    </div>
+    <div class="becas-texto">
+        <p>
+            NUESTRAS MANOS SON LAS ANTENAS DEL ALMA, LO QUE HAGAS CON
+            ELLAS SE CONVERTIRÁ EN LA OBRA MAESTRA MAS HERMOSA.            
+        </p>
+        <p>
+            Consulta por el sistema de becas y beneficios para realizar el Taller de
+            Construcción de Titeres y doná uno a Elena Santa Cruz (maestra titiritera)
+            quien los destina a hogares, Hospitales, Colegios y/o Geriátricos.            
+        </p>
+    </div>
     <!-- FOOTER -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
