--- a/contacto.html
+++ b/contacto.html
@@ -80,10 +80,32 @@
             </div>
         </div>
     </div>
-    <!-- CONTENIDO PAGINA -->
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
+    <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
             <p>JUEGOS CONSCIENTES</p>
+        </div>
+        <div class="col-2">
+            <div class="text-masthead">
+                <h3>Ingreso Marzo 2021</h3>
+            </div>
+            <div class="btn-masthead">
+                <a href="inscripcion.html" class="btn">Inscripción</a>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENIDO PAGINA -->
+    <div class="masthead">
+        <div class="col-1">
             <div class="formulario">
                 <form action="">
                     <div class="form-title">
@@ -110,17 +132,6 @@
             </div>
         </div>
         <div class="col-2">
-            <div class="text-masthead">
-                <h3>Ingreso Marzo 2021</h3>
-            </div>
-            <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
-            <div class="icon-wtsp">
-                <a href="#" id="btn-ws">
-                    <img src="img/iconwts.png" alt="">
-                </a>
-            </div>
             <div class="casa">
                 <div class="triang1"></div>
                 <div class="triang2"></div>
