--- a/inscripcion.html
+++ b/inscripcion.html
@@ -91,6 +91,19 @@
     <div class="masthead">
         <div class="col-1">
             <p>JUEGOS CONSCIENTES</p>
+        </div>
+        <div class="col-2">
+            <div class="text-masthead">
+                <h3>Ingreso Marzo 2021</h3>
+            </div>
+            <div class="btn-masthead">
+                <a href="inscripcion.html" class="btn">Inscripción</a>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENIDO PAGINA -->
+    <div class="masthead">
+        <div class="col-1">
             <div class="formulario-inscripcion">
                 <div class="form-1">
                     <form action="">
@@ -175,12 +188,6 @@
             </div>
         </div>
         <div class="col-2">
-            <div class="text-masthead">
-                <h3>Ingreso Marzo 2021</h3>
-            </div>
-            <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
             <div class="casa">
                 <div class="triang1"></div>
                 <div class="triang2"></div>
