--- a/institucional.html
+++ b/institucional.html
@@ -79,6 +79,15 @@
             </div>
         </div>
     </div>
+    <!-- ICONO WHATSAPP -->
+    <a href="#" id="btn-ws">
+        <div class="icon-wtsp">
+            <div class="icon-wtsp-items">
+                <img loading="lazy" src="img/iconwts.png" alt="">
+                <p>Contactenos</p>
+            </div>
+        </div>
+    </a>
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
@@ -90,11 +99,6 @@
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
-            <div class="icon-wtsp">
-                <a href="#" id="btn-ws">
-                    <img src="img/iconwts.png" alt="">
-                </a>
             </div>
         </div>
     </div>
@@ -318,7 +322,7 @@
             <div class="prensa-col-body">
                 <h3>ludotecario</h3>
                 <h4>la carrera que de los juguetes una profesión</h4>
-                <a href="#">ver nota</a>
+                <a href="https://www.clarin.com/ediciones-anteriores/carrera-hace-juguetes-profesion_0_S1IfgCIA6Yx.html">ver nota</a>
             </div>
         </div>
         <div class="prensa-col">
@@ -328,7 +332,7 @@
             <div class="prensa-col-body">
                 <h3>los juguetes</h3>
                 <h4>los juguetes convencionales pasan a ser una amenaza seria para el medio ambiente</h4>
-                <a href="#">ver nota</a>
+                <a href="https://www.lanacion.com.ar/espectaculos/los-juguetes-un-tema-serio-nid1364267/">ver nota</a>
             </div>
         </div>
     </div>
