--- a/carrera.html
+++ b/carrera.html
@@ -74,7 +74,7 @@
                 <iframe
                     src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
                     width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;">
                 </iframe>
             </div>
         </div>
@@ -124,11 +124,7 @@
                         en todo ámbito, para toda edad y desde nuevos paradigmas.
                     </p>
                 </div>
-                <div class="btn-youtube">
-                    <a href="#">
-                        <img src="img/youtube.png" alt="youtube">
-                    </a>
-                </div>
+                <iframe height="250" src="https://www.youtube.com/embed/b-JHjDjtr4w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="col-carrera-2">
