--- a/graduados.html
+++ b/graduados.html
@@ -75,7 +75,7 @@
                 <iframe
                     src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
                     width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;">
                 </iframe>
             </div>
         </div>
@@ -192,11 +192,7 @@
                     <p>CASA ZANZI</p>
                     <p>Talcahuano 364 - Bs As</p>
                 </div>
-                <div class="btn-youtube">
-                    <a href="#">
-                        <img src="img/youtube.png" alt="youtube">
-                    </a>
-                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JCqH_Ec1f94" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="detalle-youtube">Nota a Marta Bertran sobre el juego Karma</p>
             </div>
             <div class="col-graduados">
@@ -226,6 +222,9 @@
                         <br>
                         <p>TESTIMONIO - Gabriela Morando</p>
                     </div>
+                    <video controls>
+                        <source src="videos/iwapele.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
         </div>
