--- a/inscripcion.html
+++ b/inscripcion.html
@@ -73,7 +73,7 @@
                 <iframe
                     src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
                     width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;">
                 </iframe>
             </div>
         </div>
