--- a/inscripcion.html
+++ b/inscripcion.html
@@ -13,7 +13,7 @@
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Instituto Yuguets</title>
 </head>
-<body style="margin-top: 120px;">
+<body>
     <nav class="nav">
         <div class="menu-btn" id="btn-menu">
             <i class="fas fa-bars fa-2x"></i>
