--- a/abj.html
+++ b/abj.html
@@ -85,7 +85,7 @@
         <div class="icon-wtsp">
             <div class="icon-wtsp-items">
                 <img loading="lazy" src="img/iconwts.png" alt="">
-                <p>Contactenos</p>
+                <p>Contáctenos</p>
             </div>
         </div>
     </a>
@@ -120,7 +120,7 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/ABJ.png" alt="">
+            <img src="img/ABJ.jpg" alt="">
         </div>
         <div class="banda-central">
             <p>on line</p>
