--- a/contacto.html
+++ b/contacto.html
@@ -85,7 +85,7 @@
         <div class="icon-wtsp">
             <div class="icon-wtsp-items">
                 <img loading="lazy" src="img/iconwts.png" alt="">
-                <p>Contactenos</p>
+                <p>Contáctenos</p>
             </div>
         </div>
     </a>
