--- a/cursos.html
+++ b/cursos.html
@@ -85,7 +85,7 @@
         <div class="icon-wtsp">
             <div class="icon-wtsp-items">
                 <img loading="lazy" src="img/iconwts.png" alt="">
-                <p>Contactenos</p>
+                <p>Contáctenos</p>
             </div>
         </div>
     </a>
@@ -120,7 +120,7 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/ETNICOS.png" alt="">
+            <img src="img/etnicos2.jpg" alt="">
         </div>
         <div class="curso-carrito">
             <i class="fas fa-shopping-cart"></i>
