--- a/institucional.html
+++ b/institucional.html
@@ -84,7 +84,7 @@
         <div class="icon-wtsp">
             <div class="icon-wtsp-items">
                 <img loading="lazy" src="img/iconwts.png" alt="">
-                <p>Contactenos</p>
+                <p>Contáctenos</p>
             </div>
         </div>
     </a>
