--- a/titeres.html
+++ b/titeres.html
@@ -192,7 +192,7 @@
             <div class="preguntas-texto-contenido">
                 <p>
                     El curso está dirigido a docentes, estudiantes, animadores, ludotecariosy
-                    toda persona que desee adquirir una cultura lúdica opotenciar su creatividad.
+                    toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
                 </p>
             </div>
         </div>
@@ -217,7 +217,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Para inscribirseal curso podes hacerlo directamente desde el botón "comprar" y
+                    Para inscribirse al curso podes hacerlo directamente desde el botón "comprar" y
                     seguir los pasos o bien contactarse con nosotros vía whatsapp o mail.
                 </p>
             </div>
@@ -277,7 +277,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso tiene un costo de $6.000.- ó 3 cuotas de$2.300.- (pesos argentinos).
+                    El curso tiene un costo de $2.500.- (pesos argentinos).
                 </p>
             </div>
         </div>
