--- a/cursos.html
+++ b/cursos.html
@@ -178,7 +178,7 @@
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
         <img src="img/etnicos.jpg" alt="">
-        <button type="button">empieza ya</button>
+        <a target="_blank" href="https://mpago.la/2vMN7Qr">empieza ya</a>
         <h3>Curso completo de <strong>JUEGOS ÉTNICOS</strong> con especialistas</h3>
     </div>
     <div class="preguntas-title">
