--- a/titeres.html
+++ b/titeres.html
@@ -177,7 +177,7 @@
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
         <img src="img/titeres.jpg" alt="">
-        <button type="button">empieza ya</button>
+        <a target="_blank" href="https://mpago.la/2MLDFAa">empieza ya</a>
         <h3>Curso completo de <strong>TÍTERES</strong> con especialistas</h3>
     </div>
     <div class="preguntas-title">
@@ -277,7 +277,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso tiene un costo de $2.500.- (pesos argentinos).
+                    El curso tiene un costo de $3.000.- (pesos argentinos).
                 </p>
             </div>
         </div>
