--- a/inscripcion.html
+++ b/inscripcion.html
@@ -95,10 +95,10 @@
         <div class="col-2">
             <div class="text-masthead">
                 <h3>Ingreso Marzo 2021</h3>
-            </div>
-            <div class="btn-masthead">
+            </div><br><br>
+            <!-- <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- CONTENIDO PAGINA -->
@@ -187,7 +187,16 @@
                 </div>
             </div>
         </div>
-        <div class="col-2">
+        <div class="col-2 col-inscripcion">
+            <a target="_blank" href="https://mpago.la/2PV812x">
+                abonar matricula
+            </a>
+            <p class="aclaracion">
+                <strong>IMPORTANTE:</strong><br>
+                Para realizar la inscripción a la Tecnicatura, previamente solicitamos completar
+                y enviar el formulario. Paso siguiente el abono de la matricula.<br>
+                Muchas Gracias.
+            </p>
             <div class="casa">
                 <div class="triang1"></div>
                 <div class="triang2"></div>
