--- a/carrera.html
+++ b/carrera.html
@@ -305,6 +305,32 @@
             </video>
         </div>
     </div>
+    <!-- EMPRENDIMIENTOS DESTACADOS -->
+    <div class="emprendimientos-contenedor">
+        <div class="emprendimientos-titulo">
+            <h3>emprendimientos</h3>
+            <h2>destacados</h2>
+            <p>de alumnos y profesores de YUGUETS</p>
+        </div>
+        <div class="emprendimientos-body">
+            <a target="_blank" href="https://casahomoludens.com/">
+                <i class="fas fa-caret-right"></i>
+                sandra vissani
+            </a><br>
+            <a target="_blank" href="#">
+                <i class="fas fa-caret-right"></i>
+                GISELA RADEMAKERS
+            </a><br>
+            <a target="_blank" href="https://www.facebook.com/Trocito-de-Mundo-1032202620502634/">
+                <i class="fas fa-caret-right"></i>
+                GLORIA M. GOROSITO
+            </a><br>
+            <a target="_blank" href="https://www.los-realizadores.com.ar/">
+                <i class="fas fa-caret-right"></i>
+                SEBASTIÁN GONZÁLEZ
+            </a><br>
+        </div>
+    </div>
     <div class="btn-subir">
         <a href="#arriba">subir</a>
     </div>
